--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,7 @@
 
 {% block head %}
     {{super()}}
-    <link rel = "stylesheet" href = "{{ url_for('static', filename='css/base.css') }}">
-
+    <link rel = "stylesheet" href = "{{ url_for('static', filename='css/bootstrap.css') }}">
 {% endblock %}
 
 {% block navbar %}
@@ -26,7 +25,9 @@
 
                  <ul class="nav navbar-nav">
                     <li><a href="/"><span class="glyphicon glyphicon-home"></span> 首頁 </a></li>
-                    <li><a href="/contact"><span class="glyphicon glyphicon-envelope"></span> 聯絡我們 </a></li>
+                    <li><a href="/contact"><span class="glyphicon glyphicon-envelope"></span>專題成果</a></li>
+                     <li><a href=""><span class="glyphicon glyphicon-envelope"></span>問題</a></li>
+                     <li><a href=""><span class="glyphicon glyphicon-envelope"></span>專題成員</a></li>
                  </ul>
 
                  <ul class="nav navbar-nav navbar-right">
@@ -43,19 +44,64 @@
          </div>
     </nav>
 
-
 {% endblock %}
+
 
 {% block content %}
 
-    <div class = "container">
-    {% for message in get_flashed_messages() %}
-        <div class="alert alert-warning">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+
+      <div class="item active">
+        <img src="/static/image/272887.jpg" alt="Los Angeles" style="width:100%;">
+        <div class="carousel-caption">
+          <h3>Los Angeles</h3>
+          <p>LA is always so much fun!</p>
         </div>
-    {% endfor %}
+      </div>
+
+      <div class="item">
+        <img src="/static/image/1485559.jpg" alt="Chicago" style="width:100%;">
+        <div class="carousel-caption">
+          <h3>Chicago</h3>
+          <p>Thank you, Chicago!</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="/static/image/dd.png" alt="New York" style="width:100%;">
+        <div class="carousel-caption">
+          <h3>New York</h3>
+          <p>We love the Big Apple!</p>
+        </div>
+      </div>
+
     </div>
 
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+
 {% endblock %}
+{% block scripts %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+{%- endblock scripts %}
+
 
