--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,11 +5,10 @@
 
 {% block head %}
     {{super()}}
-    <link rel = "stylesheet" href = "{{ url_for('static', filename='css/bootstrap.css') }}">
 {% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-inverse navbar-custom" data-spy="affix" data-offset-top="50" role="navigation">
+    <nav class="navbar navbar-inverse navbar-custom" data-spy="affix" data-offset-top="50" role="navigation"style="margin:0px;">
          <div class="container">
              <div class="navbar-header">
                  <button type="button" class="navbar-toggle"
@@ -48,60 +47,42 @@
 
 
 {% block content %}
+    <section class="container" style="background-color:#000d1a;">
+        <div class="col-sm-6" style="margin-top:20px;">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="../static/image/MVI_1725.MP4" frameborder="0">
+                </iframe>
+            </div>
 
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-
-      <div class="item active">
-        <img src="/static/image/272887.jpg" alt="Los Angeles" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Los Angeles</h3>
-          <p>LA is always so much fun!</p>
         </div>
-      </div>
-
-      <div class="item">
-        <img src="/static/image/1485559.jpg" alt="Chicago" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago!</p>
+        <div class="col-sm-6" style="">
+            <h1 style="color:white; text-align:center;margin-top:50px">透過大數據的幫助，讓你精準的掌握歐元兌美元最佳進場時機</h1>
         </div>
-      </div>
-
-      <div class="item">
-        <img src="/static/image/dd.png" alt="New York" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>We love the Big Apple!</p>
+    </section>
+    <section class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="../static/image/busnies.jpg" style="width:300px;height:200px;">
+                <h1>專業</h1>
+            </div>
+            <div class="col-sm-4">
+                <img src="../static/image/busnies.jpg" style="width:300px;height:200px;">
+                <h1>信任</h1>
+            </div>
+            <div class="col-sm-4">
+                <img src="../static/image/busnies.jpg" style="width:300px;height:200px;">
+            </div>
         </div>
-      </div>
+    </section>
+    <footer>
 
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
+    </footer>
 
 {% endblock %}
+
 {% block scripts %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-{%- endblock scripts %}
+{% endblock scripts %}
 
 
