--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,15 +18,14 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                  </button>
-                 <a class="navbar-brand" href="/"> GrandCoder </a>
+                 <a class="navbar-brand" href="/"> 資測匯 </a>
              </div>
              <div class="navbar-collapse collapse" id="navbar-menu">
 
                  <ul class="nav navbar-nav">
-                     <li><a href=""><span class="glyphicon glyphicon-home"></span> 首頁 </a></li>
+                     <li><a href="/"><span class="glyphicon glyphicon-home"></span> 首頁 </a></li>
                      <li><a href="/test/testlogin"><span class="glyphicon glyphicon-envelope"></span>專題成果</a></li>
-                     <li><a href=""><span class="glyphicon glyphicon-envelope"></span>問題</a></li>
-                     <li><a href=""><span class="glyphicon glyphicon-envelope"></span>專題成員</a></li>
+                     <li><a href="/test/testshow"><span class="glyphicon glyphicon-envelope"></span>問題</a></li>
                  </ul>
 
                  <ul class="nav navbar-nav navbar-right">
@@ -47,36 +46,6 @@
 
 
 {% block content %}
-    <section class="container" style="background-color:#000d1a;">
-        <div class="col-sm-6" style="margin-top:20px;">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="../static/image/MVI_1725.MP4" frameborder="0">
-                </iframe>
-            </div>
-
-        </div>
-        <div class="col-sm-6" style="">
-            <h1 style="color:white; text-align:center;margin-top:50px">透過大數據的幫助，讓你精準的掌握歐元兌美元最佳進場時機</h1>
-        </div>
-    </section>
-    <section class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <img src="../static/image/busnies.jpg" style="width:300px;height:200px;">
-                <h1>專業</h1>
-            </div>
-            <div class="col-sm-4">
-                <img src="../static/image/busnies.jpg" style="width:300px;height:200px;">
-                <h1>信任</h1>
-            </div>
-            <div class="col-sm-4">
-                <img src="../static/image/busnies.jpg" style="width:300px;height:200px;">
-            </div>
-        </div>
-    </section>
-    <footer>
-
-    </footer>
 
 {% endblock %}
 
