--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 
+{% block head %}
+    {{super()}}
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}"/>
+{% endblock %}
 
+{% block navbar %}
+{{super()}}
+{% endblock %}
 
 {% block content %}
-    {{super()}}
+{{super()}}
+<!--
     <div class="container">
         <div class="col-sm-3">
             {% if current_user.thumbernail %}
@@ -13,4 +21,39 @@
             {% endif %}
         </div>
     </div>
+-->
+    <section id="topwelcome" class="container" style="background-color:#000d1a;">
+        <div class="col-sm-6" style="margin-top:20px;">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="../static/image/MVI_1725.MP4" frameborder="0">
+                </iframe>
+            </div>
+
+        </div>
+        <div class="col-sm-6" style="">
+            <h1 style="color:white; text-align:center;margin-top:50px">透過大數據的幫助，讓你精準的掌握歐元兌美元最佳進場時機</h1>
+        </div>
+    </section>
+    <section class="container" style="margin-top:20px;">
+        <div class="row">
+
+            <div class="col-sm-12">
+                <h2 class="text-center">如何達成</h2>
+            </div>
+
+            <div class="col-sm-4">
+                <img src="../static/image/busnies.jpg" style="width:100%;height:200px;">
+                <h2 class="text-center">資料建模分析</h2>
+            </div>
+            <div class="col-sm-4">
+                <img src="../static/image/wordcloud.jpg" style="width:100%;height:200px;">
+                <h2 class="text-center">文字探勘</h2>
+            </div>
+            <div class="col-sm-4">
+                <img src="../static/image/line-logo.png" style="width:100%;height:200px;">
+                <h2>LineChatBot及時推播</h2>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
