--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
     -->
         <section id="banner"  style="background-image: url('../../static/image/US.jpg');padding: 5em 0 5em 0;">
             <video  controls>
-                <source src="../static/image/Final Comp_1.mp4" style="width:400px;height:600px">
+                <source src="../static/image/Final Comp_2.mp4" style="width:400px;height:600px">
             </video>
         </section>
         <section id="one" class="wrapper">
@@ -53,15 +53,15 @@
                     </article>
                     <article>
                         <header>
-                            <h2>資料分析</h2>
+                            <h2>資料串流與交易</h2>
                         </header>
-                        <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+                        <p>透過python建置模型與自動化程式交易，之後透過MT4這個應用程式進行回測</p>
                     </article>
                     <article>
                         <header>
                             <h2>文字探勘</h2>
                         </header>
-                        <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+                        <p>把從網路上的資料進行分析並建模之後進行視覺化工使用者參考</p>
                     </article>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 <div class="flex flex-4">
                     <div class="box person">
                         <div class="image round">
-                            <img src="{{ url_for('static', filename='image/elwing.jpg') }}">
+                            <img src="{{ url_for('static', filename='image/jim.jpg') }}">
                         </div>
                         <h3>Jimmy</h3>
                         <p>系統架構雲端部署</p>
