--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-inverse navbar-custom" data-spy="affix" data-offset-top="50" role="navigation"style="margin:0px;">
+    <nav class="navbar  bg-info navbar-light navbar-custom" data-spy="affix" data-offset-top="50" role="navigation"style="margin:0px;">
          <div class="container">
              <div class="navbar-header">
                  <button type="button" class="navbar-toggle"
@@ -25,7 +25,7 @@
 
                  <ul class="nav navbar-nav">
                      <li><a href="/"><span class="glyphicon glyphicon-home"></span> 首頁 </a></li>
-                     <li><a href="/test/testlogin"><span class="glyphicon glyphicon-envelope"></span>專題成果</a></li>
+                     <li><a href="/test/testlogin"><span class="glyphicon glyphicon-envelope"></span>資料串流與交易</a></li>
                      <li><a href="/show/showtime"><span class="glyphicon glyphicon-envelope"></span>文字探勘</a></li>
                  </ul>
 
