--- a/app/templates/test/test.html
+++ b/app/templates/test/test.html
@@ -22,8 +22,8 @@
         <iframe src="http://192.168.119.128:5601/goto/14ed1531de44aaf4cce107c3b5962298?embed=true" height="600" width="800"></iframe>
     </section>
    !-->
-    <section id="banner" style="background-image: url('../../static/image/banner.jpg');">
-        <h1>資料分析成果</h1>
+    <section id="banner" style="background-image: url('../../static/image/article.jpg');">
+        <h1 style="font-family:微軟正黑體">資料自動交易成果</h1>
         <video  controls style="width:50%;">
             <source src="../static/image/9ih0p-i27o4.mp4" >
         </video>
